fin partie reception

--- a/style.css
+++ b/style.css
@@ -136,4 +136,41 @@ input[type="button"] {
 } 
 /*Fin index*/
 
+/*Clignoter l'utilisateur*/
+#clignoter1 {
+    animation: clignoter1 2s infinite;
+}
+@keyframes clignoter1 {
+    0% { opacity:0.2; }
+    50% { opacity:1; }
+    100% { opacity:0; }
+} 
+
+/*Clignoter reclamation*/
+#clignoter2 {
+    animation: clignoter2 1.5s infinite;
+}
+@keyframes clignoter2 {
+    0% { opacity:0.2; }
+    50% { opacity:1; }
+    100% { opacity:0; }
+}
+
+/*Clignoter reclamation*/
+#rejet {
+    animation: rejet 2.5s infinite;
+}
+@keyframes rejet {
+    0% { opacity:0.2; }
+    50% { opacity:1; }
+    100% { opacity:0; }
+}
+
+#dialog{ max-width: 90% !important; }
+
+.mat-spinner-color::ng-deep circle{
+    stroke: #00a651 !important;
+}
+
+/*Fin clignoter l'utilisateur*/
 
