--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ form {
     text-align: center;
 }
 
-p {
+#monTitre {
     color: white;
     font-weight: 500;
     opacity: .7;
@@ -49,7 +49,7 @@ a:active {
     text-shadow: none;
 }
 
-input {
+input{
     background: transparent;
     border: none;
     border-left: 1px solid rgba(255, 255, 255, .3);
